# AudioNodeFocus

./: README.md  env.txt  key  requirements.txt
src/audionodepackage/: CMakeLists.txt  package.xml  setup.py
src/audionodepackage/audionodepackage/: Ambiant_listner.py  Beep_listner.py  Music_listner.py  Silence_listner.py  Speech_listner.py  client.py  detect.py  record.py  service.py  service_second_model.py
src/audionodepackage/launch/: server.launch.py  server_second_model.launch.py
src/audionodepackage/launch/script/: get_last_id.py
src/audionodepackage/resources/model/yamnet_ray/assets/: yamnet_class_map.csv
src/audionodepackage/resources/recordings/: test2
src/audionodepackage/srv/: Detect.srv  Record.srv  Texttospeech.srv
src/resources/: Transfer_learning.ipynb  [learning_path]_model_maker_audio_colab.ipynb  costum_yamnet.ipynb  train_costum.ipynb  transfer2.ipynb  yamnet_ray.ipynb
src/resources/Transfer_learning_yamnet/: README.md  transfer3.ipynb
src/resources/trained_custom_5classes/: fingerprint.pb  saved_model.pb
src/resources/trained_custom_5classes/variables/: variables.index
src/resources/yamnet_ray/: fingerprint.pb  saved_model.pb
src/resources/yamnet_ray/assets/: yamnet_class_map.csv  yamnet_class_map1.csv
